--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- favicon -->
-    <link rel="icon" type="image/ico" href="images/favicon.ico.png" />
+    <link rel="icon" type="image/ico" href="images/favicon.png" />
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,47 +41,45 @@
 
     <main>
         <h1>Let Us Know How We're Doing!</h1>
-
-        <form name="Cover Charge Feedback" method="POST" action="">
-
-            <div class="feedback">
+        <form class="contact-form" id="test_form" name="test_form" method="" action="form.php" onsubmit="return validateForm(this)">
+            <div class="feedback input-section">
                 <label for="feedback" class="label_input_wrap">Feedback:</label>
                 <textarea name="feedback" id="feedback" cols="50" rows="15" placeholder="We value your feedback!"></textarea>
             </div>
 
-            <div class="first-name">
+            <div class="first-name input-section">
                 <label for="firstname" class="label_input_wrap">First Name:</label>
                 <input type="text" name="firstname" id="firstname" placeholder="ex. Anthony">
-            </div>ks
+            </div>
 
-            <div class="last-name">
+            <div class="last-name input-section">
                 <label for="lastname" class="label_input_wrap">Last Name:</label>
                 <input type="text" name="lastname" id="lastname" placeholder="ex. Fauci">
             </div>
 
-            <div class="email">
+            <div class="email input-section">
                 <label for="email" class="label_input_wrap">Email:</label>
                 <input type="email" name="email" id="email" placeholder="afauci@maskup.com">
             </div>
 
-            <div class="checkbox">
+            <div class="checkbox input-section">
                 <h2>Most Frequented Cover Charge Partners</h2>
                 <p>Choose all that apply.</p>
                 <input type="checkbox" name="bars" value="mothers" id="bar" /><label for="mothers"> Mother's</label>
-                <input type="checkbox" name="bars" value="balls" id="balls" /><label for="balls">Balls</label>
-                <input type="checkbox" name="bars" value="madrinas" id="madrinas" /><label for="madrinas">Madrina's</label>
-                <input type="checkbox" name="bars" value="thedime" id="thedime" /><label for="thedime">The Dime
+                <input type="checkbox" name="bars" value="balls" id="balls" /><label for="balls"> Balls</label>
+                <input type="checkbox" name="bars" value="madrinas" id="madrinas" /><label for="madrinas"> Madrina's</label>
+                <input type="checkbox" name="bars" value="thedime" id="thedime" /><label for="thedime"> The Dime
                 </label>
             </div>
 
-            <div class="radiobutton">
+            <div class="radiobutton input-section">
                 <h2>Are you a student?</h2>
                 <input type="radio" name="student" value="student" id="student" /><label for="mothers">Yes</label>
                 <input type="radio" name="student" value="notstudent" id="notstudent" /><label for="balls">No</label>
 
             </div>
 
-            <div class="dropdown">
+            <div class="dropdown input-section">
                 <label for="age" class="label_input_wrap">Age (Optional):</label>
                 <select name="age" id="age">
                     <option value="18-20">20 & under</option>
@@ -98,7 +96,7 @@
             </div>
 
             <div class="submit">
-                <input type="submit" />
+                <input type="submit" value="Submit">
             </div>
         </form>
 
