corrected errors found during validation and removed redundant code

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="checkbox input-section">
                 <h2>Most Frequented Cover Charge Partners</h2>
                 <p>Choose all that apply.</p>
-                <input type="checkbox" name="bars" value="mothers" id="bar" /><label for="mothers"> Mother's</label>
+                <input type="checkbox" name="bars" value="mothers" id="mothers" /><label for="mothers"> Mother's</label>
                 <input type="checkbox" name="bars" value="balls" id="balls" /><label for="balls"> Balls</label>
                 <input type="checkbox" name="bars" value="madrinas" id="madrinas" /><label for="madrinas"> Madrina's</label>
                 <input type="checkbox" name="bars" value="thedime" id="thedime" /><label for="thedime"> The Dime
@@ -75,8 +75,8 @@
 
             <div class="radiobutton input-section">
                 <h2>Are you a student?</h2>
-                <input type="radio" name="student" value="student" id="student" /><label for="mothers">Yes</label>
-                <input type="radio" name="student" value="notstudent" id="notstudent" /><label for="balls">No</label>
+                <input type="radio" name="student" value="student" id="student" /><label for="student">Yes</label>
+                <input type="radio" name="student" value="nonstudent" id="nonstudent" /><label for="nonstudent">No</label>
 
             </div>
 
