prepared all php forms

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
 
             <div class="dropdown input-section">
-                <label for="age" class="label_input_wrap">Age (Optional):</label>
+                <label for="age" class="label_input_wrap">Age Range:</label>
                 <select name="age" id="age">
                     <option value="18-20">20 & under</option>
                     <option value="21-30">21-30</option>
